--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "private": true,
   "scripts": {
     "build": "spago build",
-    "start": "spago run"
+    "start": "spago run",
+    "format": "purs-tidy format-in-place ./src"
   },
   "devDependencies": {
     "esbuild": "^0.17.15",
     "purescript": "^0.15.8",
+    "purs-tidy": "^0.9.3",
     "spago": "^0.20.9"
   }
 }
